# CMake_template1

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config_creation.cpp  config_creation.h
tests/: CMakeLists.txt  config_creation_tests.cpp
